--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/jsonwebtoken": "^9.0.6",
       "@types/node": "^16.11.10",
       "ts-node": "10.9.1",
       "typescript": "4.5.2"
@@ -12,7 +13,9 @@
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "cors": "^2.8.5",
+      "dotenv": "^16.4.5",
       "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "ts-node-dev": "^2.0.0",
